# Phoenix

./: .gitignore  CMakeLists.txt
CockpitLink/: CMakeLists.txt  README.md
CockpitLink/catalog/: base-behaviors.json
CockpitLink/docs/: architecture.md  arduino-api.md  behavior-catalog.md  behavior-schema.md  protocol-v2.md
CockpitLink/firmware/arduino/libraries/CockpitLink/: library.properties
CockpitLink/firmware/arduino/libraries/CockpitLink/examples/ButtonBox/: ButtonBox.ino
CockpitLink/firmware/arduino/libraries/CockpitLink/src/: CockpitLink.cpp  CockpitLink.h  CockpitLinkProtocol.h
CockpitLink/host/apps/: CockpitLinkProbe.cpp
CockpitLink/host/include/cockpitlink/logging/: SerialTraceLogger.h
CockpitLink/host/include/cockpitlink/protocol/: Frame.h  FrameParser.h  Payloads.h  TraceFormatter.h
CockpitLink/host/include/cockpitlink/serial/: ISerialEnumerator.h  SerialDeviceClassifier.h  SerialDeviceKind.h  SerialPortInfo.h  WindowsSerialEnumerator.h  WindowsSerialTransport.h
CockpitLink/host/include/cockpitlink/transport/: IByteTransport.h
CockpitLink/host/src/logging/: SerialTraceLogger.cpp
CockpitLink/host/src/protocol/: Frame.cpp  FrameParser.cpp  Payloads.cpp  TraceFormatter.cpp
CockpitLink/host/src/serial/: SerialDeviceClassifier.cpp  WindowsSerialEnumerator.cpp  WindowsSerialTransport.cpp
CockpitLink/host/tests/catalog/: BehaviorCatalogValidationTests.cpp
CockpitLink/host/tests/protocol/: FrameParserTests.cpp
CockpitLink/xplane/: CockpitLinkXPlanePlugin.cpp
core/include/phoenix/dev/: DevelopmentDeviceLoop.h
core/include/phoenix/discovery/: DiscoveredDevice.h  LegacyXplproProbe.h
core/include/phoenix/logging/: Log.h  SerialTraceLogger.h
core/include/phoenix/profile/: DeviceProfile.h  JsonDeviceProfileStore.h
core/include/phoenix/protocol/legacy/: LegacyFrame.h  LegacyFrameParser.h  LegacyMessage.h
core/include/phoenix/runtime/: DeviceRuntimeManager.h  LegacyDeviceController.h  LegacyDeviceSession.h  LegacyUpdateScheduler.h
core/include/phoenix/serial/: IByteTransport.h  ISerialEnumerator.h  ISerialTransportFactory.h  LinuxSerialEnumerator.h  LinuxSerialTransport.h  LinuxSerialTransportFactory.h  MacSerialEnumerator.h  MacSerialTransport.h  MacSerialTransportFactory.h  NativeSerial.h  SerialDeviceClassifier.h  SerialDeviceKind.h  SerialPortInfo.h  WindowsSerialEnumerator.h  WindowsSerialTransport.h  WindowsSerialTransportFactory.h
core/include/phoenix/transport/: IByteTransport.h
core/include/phoenix/xplane/: IXPlaneBridge.h
core/include/phoenix/xplane/sdk/: XPlaneSdkApi.h  XPlaneSdkBridge.h
core/src/: main.cpp
core/src/dev/: DevelopmentDeviceLoop.cpp
core/src/discovery/: LegacyXplproProbe.cpp
core/src/logging/: Log.cpp  SerialTraceLogger.cpp
core/src/profile/: JsonDeviceProfileStore.cpp
core/src/protocol/legacy/: LegacyFrame.cpp  LegacyFrameParser.cpp  LegacyMessage.cpp
core/src/runtime/: DeviceRuntimeManager.cpp  LegacyDeviceController.cpp  LegacyDeviceSession.cpp  LegacyUpdateScheduler.cpp
core/src/serial/: LinuxSerialEnumerator.cpp  LinuxSerialTransport.cpp  LinuxSerialTransportFactory.cpp  MacSerialEnumerator.cpp  MacSerialTransport.cpp  MacSerialTransportFactory.cpp  SerialDeviceClassifier.cpp  WindowsSerialEnumerator.cpp  WindowsSerialTransport.cpp  WindowsSerialTransportFactory.cpp
core/src/xplane/sdk/: XPlaneSdkApi.cpp  XPlaneSdkBridge.cpp
firmware/: README.md
firmware/arduino/libraries/PhoenixXPL/: README.md  library.properties
firmware/arduino/libraries/PhoenixXPL/examples/BasicSerial/: BasicSerial.ino
firmware/arduino/libraries/PhoenixXPL/src/: PhoenixXPL.cpp  PhoenixXPL.h
firmware/arduino/libraries/PhoenixXPL/src/platform/: ArduinoPlatform.h
firmware/arduino/libraries/PhoenixXPL/src/protocol/: LegacyProtocol.cpp  LegacyProtocol.h
firmware/arduino/libraries/PhoenixXPL/src/transport/: IpTransport.h  PhoenixTransport.h  StreamTransport.cpp
firmware/arduino/libraries/XPLLink/: README.md  library.properties
firmware/arduino/libraries/XPLLink/examples/BasicSerial/: BasicSerial.ino
firmware/arduino/libraries/XPLLink/examples/CacheTest/: CacheTest.ino
firmware/arduino/libraries/XPLLink/src/: XPLLedStrip.h  XPLLink.cpp  XPLLink.h  XPLMux4067Switches.h  XPLMux9685Servos.h  XPLPotentiometers.h  XPLRotarySwitch.h  XPLSwitches.h
firmware/arduino/libraries/XPLLink/src/transport/: StreamTransport.h
plugin/: PhoenixStatusWindow.cpp  PhoenixStatusWindow.h  XPlanePlugin.cpp
tests/profile/: JsonDeviceProfileStoreTests.cpp
tests/protocol/: LegacyFrameParserTests.cpp
tests/runtime/: LegacyDeviceControllerTests.cpp  LegacyDeviceSessionTests.cpp  LegacyUpdateSchedulerTests.cpp
tests/xplane/: XPlaneSdkBridgeTests.cpp
